--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
             </div>
             <ul class="nav-links">
                 <li><a href="/index.html">خانه</a></li>
-                <li><a href="/tours.html">تورها</a></li>
+                <!-- <li><a href="/tours.html">تورها</a></li> -->
                 <li><a href="/about.html">درباره ما</a></li>
                 <li><a href="/rules.html">قوانین</a></li>
                 <li><a href="/contact.html">تماس با ما</a></li>
             </ul>
             <div class="auth-buttons">
-                <a href="/login.html" class="btn btn-login">ورود</a>
-                <a href="/register.html" class="btn btn-register">ثبت نام</a>
+                <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
+                <a href="https://tourun.ir/user/register" class="btn btn-register">ثبت نام</a>
             </div>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -83,7 +83,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <img src="images/images.png" alt="عضو تیم">
-                        <h3>خانم عفاری</h3>
+                        <h3>خانم غفاری</h3>
                         <p>مدیر فنی و تور لیدر</p>
                     </div>
                     <div class="team-member">
