--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <a href="/">کیجارو</a>
       </div>
       <ul class="nav-links">
-        <li><a href="/index.html">خانه</a></li>
+        <li><a href="/">خانه</a></li>
         <!-- <li><a href="/tours.html">تورها</a></li> -->
-        <li><a href="/about.html">درباره ما</a></li>
-        <li><a href="/rules.html">قوانین</a></li>
-        <li><a href="/contact.html">تماس با ما</a></li>
+        <li><a href="/about.html" target="_blank">درباره ما</a></li>
+        <li><a href="/rules.html" target="_blank">قوانین</a></li>
+        <li><a href="/contact.html" target="_blank">تماس با ما</a></li>
       </ul>
       <div class="auth-buttons">
         <a href="/login.html" class="btn btn-login">ورود</a>
@@ -38,7 +38,7 @@
     <section class="hero-section">
       <div class="hero-video-container">
         <video autoplay muted loop playsinline class="hero-video">
-          <source src="videos/WhatsApp Video 2025-05-15 at 09.59.24.mp4" type="video/mp4">
+          <source src="videos/WhatsApp Video 2025-05-15 at 16.49.03.mp4" type="video/mp4">
         </video>
       </div>
       <div class="hero-content">
