--- a/login.html
+++ b/login.html
@@ -17,14 +17,14 @@
             </div>
             <ul class="nav-links">
                 <li><a href="/">خانه</a></li>
-                <li><a href="/tours.html">تورها</a></li>
+                <!-- <li><a href="/tours.html">تورها</a></li> -->
                 <li><a href="/about.html">درباره ما</a></li>
                 <li><a href="/rules.html">قوانین</a></li>
                 <li><a href="/contact.html">تماس با ما</a></li>
             </ul>
             <div class="auth-buttons">
-                <a href="/login.html" class="btn btn-login">ورود</a>
-                <a href="/register.html" class="btn btn-register">ثبت نام</a>
+                <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
+                <a href="https://tourun.ir/user/register" class="btn btn-register">ثبت نام</a>
             </div>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
