added mashhd tour details

--- a/about.html
+++ b/about.html
@@ -13,11 +13,12 @@
     <header>
         <nav class="main-nav">
             <div class="logo">
-                <a href="/">کیجارو</a>
+                <a href="index.html">کیجارو</a>
             </div>
             <ul class="nav-links">
+                <a href="/">test</a>
                 <li><a href="/index.html">خانه</a></li>
-                <!-- <li><a href="/tours.html">تورها</a></li> -->
+                <li><a href="/tours.html">تورها</a></li>
                 <li><a href="/about.html">درباره ما</a></li>
                 <li><a href="/rules.html">قوانین</a></li>
                 <li><a href="/contact.html">تماس با ما</a></li>
@@ -53,6 +54,52 @@
                     </div>
                     <div class="about-image">
                         <img src="images/264500_143.jpg" alt="تاریخچه کیجارو">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Our Promise Section -->
+        <section class="about-section promise-section">
+            <div class="container">
+                <div class="promise-content">
+                    <div class="promise-header">
+                        <h2>وعده ما به شما</h2>
+                        <div class="promise-divider">
+                            <i class="fas fa-compass"></i>
+                        </div>
+                    </div>
+                    <div class="promise-grid">
+                        <div class="promise-item">
+                            <div class="promise-icon">
+                                <i class="fas fa-mountain"></i>
+                            </div>
+                            <div class="promise-text">
+                                <h3>به جای فروش تور</h3>
+                                <p>حس ماجراجویی می‌فروشیم</p>
+                            </div>
+                        </div>
+                        <div class="promise-item">
+                            <div class="promise-icon">
+                                <i class="fas fa-chart-line"></i>
+                            </div>
+                            <div class="promise-text">
+                                <h3>به جای آمار و ارقام</h3>
+                                <p>دل‌گرمی و راهنمایی واقعی می‌دهیم</p>
+                            </div>
+                        </div>
+                        <div class="promise-item">
+                            <div class="promise-icon">
+                                <i class="fas fa-users"></i>
+                            </div>
+                            <div class="promise-text">
+                                <h3>به جای تنها گذاشتن کاربر</h3>
+                                <p>با او دوست می‌شویم</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="promise-footer">
+                        <p>همراه ما باشید تا گردشگری فقط رفتن نباشد؛ رسیدن به خودتان باشد.</p>
                     </div>
                 </div>
             </div>
