--- a/rules.html
+++ b/rules.html
@@ -13,14 +13,14 @@
     <header>
         <nav class="main-nav">
             <div class="logo">
-                <a href="/">کیجارو</a>
+                <a href="index.html">کیجارو</a>
             </div>
             <ul class="nav-links">
-                <li><a href="/">خانه</a></li>
-                <!-- <li><a href="/tours.html">تورها</a></li> -->
-                <li><a href="/about.html">درباره ما</a></li>
-                <li><a href="/rules.html">قوانین</a></li>
-                <li><a href="/contact.html">تماس با ما</a></li>
+                <li><a href="index.html">خانه</a></li>
+                <li><a href="tours.html">تورها</a></li>
+                <li><a href="about.html">درباره ما</a></li>
+                <li><a href="rules.html">قوانین</a></li>
+                <li><a href="contact.html">تماس با ما</a></li>
             </ul>
             <div class="auth-buttons">
                 <a href="https://tourun.ir/user/login" class="btn btn-login">ورود</a>
