--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
                 <li><a href="index.html">خانه</a></li>
                 <li><a href="tours.html">تورها</a></li>
                 <li><a href="about.html">درباره ما</a></li>
+                <li><a href="rules.html">قوانین</a></li>
                 <li><a href="contact.html">تماس با ما</a></li>
             </ul>
             <div class="auth-buttons">
