added other tours

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <style>
+    .tour-description{
+      color: var(--text-light);
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -58,16 +63,18 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="tour-card">
-              <img src="images/4b8a250b1f45492da2a71b98db65fffc.jpg" alt="تور استانبول" class="tour-image">
+              <img src="images/4b8a250b1f45492da2a71b98db65fffc.jpg" alt="تور شیراز" class="tour-image">
               <div class="tour-content">
-                <h3 class="tour-title">تور استانبول</h3>
-                <p class="tour-description">سفری ۵ روزه به شهر رویایی استانبول</p>
+                <h3 class="tour-title">تور شیراز ویژه سازمان ها</h3>
+                <p class="tour-description">سفر آغاز آشنایی‌ست، نه فقط با شهر... بلکه با دل‌هایی که کنارت قدم می‌زنند.
+در تور سازمانی شیراز، ما فقط به حافظیه نمی‌رویم؛ به عمق دوستی، همدلی و شناخت هم می‌رویم.
+با همکارانت آشنا شو، نه فقط در کار؛ بلکه در لحظه‌هایی که خندیدن، دیدن و بودن معنا می‌گیرد.
+</p>
                 <div class="tour-details">
-                  <span class="tour-date">شروع: ۱۵ فروردین ۱۴۰۳</span>
-                  <span class="tour-duration">۵ روز</span>
+                  <span class="tour-duration">3 شب و 4 روز</span>
                 </div>
                 <div class="tour-footer">
-                  <a href="tour-details.html" class="btn btn-details">مشاهده جزئیات</a>
+                  <a href="/tours/shiraz-organizational.html" class="btn btn-details">مشاهده جزئیات</a>
                   <a href="https://wa.me/989945400368" class="btn btn-book" target="_blank">رزرو تور</a>
                 </div>
               </div>
@@ -130,7 +137,7 @@
 
           <div class="swiper-slide">
             <div class="tour-card">
-              <img src="images/BqTp3loCwZRUDJgmIkvSrIeiVAWMOQir2ddwiGgL.jpeg" alt="تور مشهد" class="tour-image">
+              <img src="images/حرم امام رضا.jpg" alt="تور مشهد" class="tour-image">
               <div class="tour-content">
                 <h3 class="tour-title">تور مشهد ویژه سازمان‌ها</h3>
                 <p class="tour-description">سفری متفاوت با طعم رفاقت و آرامش. بازدید از جاذبه‌های گردشگری مشهد به همراه زیارت حرم مطهر امام رضا (ع).</p>
