--- a/tours/qeshm-organizational.html
+++ b/tours/qeshm-organizational.html
@@ -3,22 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="رزرو تور مشهد سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره نزدیک حرم، گشت کامل طرقبه، شاندیز، آرامگاه فردوسی، پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
-    <meta name="keywords" content="تور مشهد, تور مشهد سازمانی, تور زیارتی مشهد, سفر گروهی مشهد, رزرو تور مشهد, هتل نزدیک حرم, تور مشهد با گشت, تور مشهد با قطار, تور مشهد با هواپیما, تور ۳ شب و ۴ روز مشهد, تور اداری مشهد, تور مشهد ویژه شرکت‌ها">
-    <title>تور مشهد ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل نزدیک حرم</title>
+    <meta name="description" content="رزرو تور قشم سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره، گشت کامل جزیره، تفریحات دریایی، پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
+    <meta name="keywords" content="تور قشم, تور قشم سازمانی, تور تفریحی قشم, سفر گروهی قشم, رزرو تور قشم, هتل قشم, تور قشم با گشت, تور قشم با هواپیما, تور ۳ شب و ۴ روز قشم, تور اداری قشم, تور قشم ویژه شرکت‌ها">
+    <title>تور قشم ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل ساحلی</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
-       <style>
-        .tour-description{
-            color: white;
-        }
-
-        .tour-subtitle{
-            color: wheat;
-        }
-       </style>
 </head>
 <body>
     <header>
@@ -47,8 +38,8 @@
         <section class="tour-details-section">
             <div class="tour-details-container">
                 <div class="tour-header">
-                    <h1>تور مشهد ویژه سازمان‌ها</h1>
-                    <p class="tour-subtitle">سفری متفاوت با طعم رفاقت و آرامش</p>
+                    <h1>تور قشم ویژه سازمان‌ها</h1>
+                    <p class="tour-subtitle">سفری تفریحی با طعم دریا و طبیعت</p>
                 </div>
 
                 <div class="tour-main-info">
@@ -60,7 +51,7 @@
                     <div class="info-card">
                         <i class="fas fa-plane"></i>
                         <h3>نوع حمل و نقل</h3>
-                        <p>اتوبوس | قطار | هواپیما</p>
+                        <p>هواپیما</p>
                     </div>
                     <div class="info-card">
                         <i class="fas fa-utensils"></i>
@@ -70,29 +61,29 @@
                     <div class="info-card">
                         <i class="fas fa-hotel"></i>
                         <h3>اقامت</h3>
-                        <p>هتل‌های ۲ و ۳ ستاره (۵ دقیقه تا حرم)</p>
+                        <p>هتل‌های ۲ و ۳ ستاره (ساحلی)</p>
                     </div>
                 </div>
 
                 <div class="tour-description">
                     <h2>توضیحات تور</h2>
-                    <p>✨ تور مشهد ویژه سازمان‌ها – یک سفر دوستانه، صمیمی و پُر از آرامش ✨</p>
-                    <p>گاهی وقتا بین هیاهوی کار و زندگی، فقط یه سفر گروهی می‌تونه دوباره قلب‌مون رو به هم نزدیک کنه.</p>
-                    <p>اگه شما هم دنبال یه تجربه‌ی متفاوت، صمیمی و خاطره‌ساز هستید، تور مشهد ویژه سازمانی ما دقیقاً همون چیزیه که دنبالشین.</p>
-                    <p>ما این تور رو نه فقط برای دیدن، بلکه برای حس‌کردن ساختیم... برای ساختن لحظه‌هایی که همکارها رو تبدیل به رفیق می‌کنه.</p>
+                    <p>✨ تور قشم ویژه سازمان‌ها – یک سفر تفریحی، دریایی و پُر از لذت ✨</p>
+                    <p>قشم، جزیره‌ای زیبا با سواحل شنی و آب‌های نیلگون خلیج فارس.</p>
+                    <p>اگه شما هم دنبال یه تجربه‌ی متفاوت، تفریحی و خاطره‌ساز هستید، تور قشم ویژه سازمانی ما دقیقاً همون چیزیه که دنبالشین.</p>
+                    <p>ما این تور رو نه فقط برای دیدن، بلکه برای حس‌کردن ساختیم... برای ساختن لحظه‌هایی که همکارها رو به سفری تفریحی دعوت می‌کنه.</p>
 
                     <h3>✅ چرا این تور فرق داره؟</h3>
-                    <p>ما باور داریم هر سفر، فرصتیه برای ساختن روابط انسانی قوی‌تر. توی این تور، شما فقط مسافر نیستید، بلکه عضوی از یک گروه همراه، پرانرژی و صمیمی هستید. ما با دقت تمام، هر بخش رو طوری برنامه‌ریزی کردیم که حس رفاقت، احترام و لذت واقعی از سفر رو تجربه کنید.</p>
+                    <p>ما باور داریم هر سفر، فرصتیه برای تفریح و لذت بردن. توی این تور، شما فقط مسافر نیستید، بلکه عضوی از یک گروه تفریحی و صمیمی هستید. ما با دقت تمام، هر بخش رو طوری برنامه‌ریزی کردیم که حس تفریح، لذت و آرامش واقعی از سفر رو تجربه کنید.</p>
 
                     <h3>📦 اطلاعات کامل تور:</h3>
                     <h4>📅 مدت اقامت:</h4>
-                    <p>3 شب و 4 روز پر از تجربه‌های متفاوت</p>
+                    <p>3 شب و 4 روز پر از تجربه‌های تفریحی</p>
 
-                    <h4>🚍 نوع حمل‌ونقل (قابل انتخاب):</h4>
+                    <h4>✈️ پرواز:</h4>
                     <ul>
-                        <li>اتوبوس VIP</li>
-                        <li>قطار کوپه‌ای</li>
-                        <li>پرواز رفت‌وبرگشت</li>
+                        <li>پرواز رفت‌وبرگشت از تهران</li>
+                        <li>ترانسفر فرودگاهی</li>
+                        <li>چمدان 20 کیلویی</li>
                     </ul>
 
                     <h4>🍽 پذیرایی کامل:</h4>
@@ -104,22 +95,22 @@
 
                     <h4>🗺 گشت‌های جذاب همراه راهنما:</h4>
                     <ul>
-                        <li>گشت فرهنگی: آرامگاه فردوسی و پارک ملت</li>
-                        <li>گشت تفریحی: کوه‌سنگی، پارک آبی و باغ پرندگان</li>
-                        <li>گشت طبیعی و خوشمزه: طرقبه و شاندیز با ناهار محلی</li>
+                        <li>گشت تفریحی: دره ستاره‌ها و جنگل حرا</li>
+                        <li>گشت ساحلی: ساحل لاک‌پشت‌ها و غار خربس</li>
+                        <li>گشت خرید: بازارهای محلی قشم</li>
                     </ul>
 
                     <h4>🏨 اقامت:</h4>
                     <ul>
-                        <li>هتل‌های 2 یا 3 ستاره</li>
-                        <li>فاصله فقط 5 دقیقه پیاده‌روی تا حرم مطهر</li>
+                        <li>هتل‌های 2 یا 3 ستاره در نزدیکی ساحل</li>
+                        <li>دسترسی آسان به مراکز تفریحی</li>
                         <li>اتاق‌های تمیز، مجهز و مناسب برای اقامت گروهی</li>
                     </ul>
 
                     <h3>👥 ویژه سازمان‌ها و رزروهای گروهی</h3>
                     <p>اگه قراره با همکارا، کارمندها یا اعضای تیم‌تون سفر برید، ما همه‌چیز رو برای یه تجربه حرفه‌ای اما دوستانه فراهم کردیم. مدیریت یکپارچه، پشتیبانی کامل، زمان‌بندی دقیق و انعطاف بالا مخصوص گروه‌های شرکتی طراحی شده.</p>
 
-                    <h3>📞 همین حالا تماس بگیرید و سفری متفاوت رو شروع کنید!</h3>
+                    <h3 class="call-action">📞 همین حالا تماس بگیرید و سفری متفاوت رو شروع کنید!</h3>
                     <p>ظرفیت محدود | رزرو فقط با ثبت نام گروهی</p>
                 </div>
 
@@ -153,24 +144,24 @@
                     <h2>جاذبه‌های گردشگری</h2>
                     <div class="attractions-grid">
                         <div class="attraction-item">
-                            <img src="../images/torghabeh.jpg" alt="طرقبه">
-                            <h3>طرقبه و شاندیز</h3>
-                            <p>بازدید از منطقه ییلاقی و خرید سوغاتی</p>
+                            <img src="../images/qeshm/stars-valley.jpg" alt="دره ستاره‌ها">
+                            <h3>دره ستاره‌ها</h3>
+                            <p>شاهکار طبیعت و فرسایش</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/kouhsangi.jpg" alt="کوه‌سنگی">
-                            <h3>کوه‌سنگی و پارک ملت</h3>
-                            <p>بازدید از پارک‌های تفریحی مشهد</p>
+                            <img src="../images/qeshm/hara-forest.jpg" alt="جنگل حرا">
+                            <h3>جنگل حرا</h3>
+                            <p>اکوسیستم منحصر به فرد</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/ferdowsi.jpg" alt="آرامگاه فردوسی">
-                            <h3>آرامگاه فردوسی</h3>
-                            <p>بازدید از آرامگاه حکیم ابوالقاسم فردوسی</p>
+                            <img src="../images/qeshm/turtle-beach.jpg" alt="ساحل لاک‌پشت‌ها">
+                            <h3>ساحل لاک‌پشت‌ها</h3>
+                            <p>زیستگاه لاک‌پشت‌های دریایی</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/waterpark.jpg" alt="پارک آبی">
-                            <h3>پارک آبی</h3>
-                            <p>تفریحات آبی و سرگرمی</p>
+                            <img src="../images/qeshm/kharbas-cave.jpg" alt="غار خربس">
+                            <h3>غار خربس</h3>
+                            <p>غار تاریخی با معماری خاص</p>
                         </div>
                     </div>
                 </div>
