end of the kish and bandar abbas pages

--- a/tours/shiraz-organizational.html
+++ b/tours/shiraz-organizational.html
@@ -156,37 +156,56 @@
                         <div class="attraction-item">
                             <img src="../images/تخت جمشید.jpg" alt="تخت جمشید">
                             <h3>تخت جمشید</h3>
-                            <p>شاهکار معماری هخامنشی و میراث جهانی یونسکو</p>
+                            <p> محل دیدار عظمت و فروتنی ،
+جایی که سنگ‌ها از شکوه می‌گویند و زمان به احترام می‌ایستد.</p>
                         </div>
                         <div class="attraction-item">
                             <img src="../images/حافظیه شیراز.jpg" alt="حافظیه">
                             <h3>حافظیه</h3>
-                            <p>آرامگاه شاعر بزرگ ایرانی و فضای معنوی</p>
+                            <p>پناهگاه دل‌های شاعر و سرگردان
+جایی که واژه‌ها به نجوا درمی‌آیند و دل‌ها به آرامش می‌رسند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/shiraz/eram.jpg" alt="باغ ارم">
+                            <img src="../images/باغ ارم.jpg" alt="باغ ارم">
                             <h3>باغ ارم</h3>
-                            <p>باغ تاریخی با معماری منحصر به فرد</p>
+                            <p>تجلی تعادل، زیبایی و زندگی در کنار هم
+جایی که طبیعت لبخند می‌زند و آرامش در هر برگ جاری‌ست.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/shiraz/nasir.jpg" alt="مسجد نصیرالملک">
+                            <img src="../images/مسجد نصیرالملک.jpg" alt="مسجد نصیرالملک">
                             <h3>مسجد نصیرالملک</h3>
-                            <p>مسجد صورتی با معماری خیره‌کننده</p>
+                            <p>رقص نور و ایمان بر فرش زمان
+جایی که رنگ‌ها نماز می‌خوانند و هر پنجره، دری به دل است.</p>
                         </div>
                         <div class="attraction-item">
                             <img src="../images/سعدیه.jpg" alt="سعدیه">
                             <h3>سعدیه</h3>
-                            <p>مسجد صورتی با معماری خیره‌کننده</p>
+                            <p>قرارگاه خرد و مهربانی
+جایی که واژه‌ها تربیت می‌کنند و اندیشه‌ها پرواز می‌کنند.</p>
                         </div>
                         <div class="attraction-item">
                             <img src="../images/باغ دلگشا.jpg" alt="باغ دلگشا">
                             <h3>باغ دلگشا</h3>
-                            <p>مسجد صورتی با معماری خیره‌کننده</p>
+                            <p>نفس تازه‌ی جان در آغوش شکوفه‌ها
+جایی که هر برگ، زمزمه‌ای از آرامش است و هر نسیم، پیام‌آور لبخند.</p>
                         </div>
                           <div class="attraction-item">
                             <img src="../images/باغ جهان نما.jpg" alt="باغ جهان نما">
-                            <h3>باغ دلگشا</h3>
-                            <p>مسجد صورتی با معماری خیره‌کننده</p>
+                            <h3>باغ جهان نما</h3>
+                            <p>آیینه‌ای از شکوه جهان در دل شیراز
+جایی که طبیعت و معماری دست در دست داده‌اند تا جهانی کوچک بسازند.</p>
+                        </div>
+                        <div class="attraction-item">
+                            <img src="../images/مسجد وکیل شیراز.jpg" alt="مسجد وکیل">
+                            <h3>مسجد وکیل</h3>
+                            <p>ستون‌های استوار، سکوتی پر از شکوه
+جایی که هنر و ایمان در کنار هم قامت راست کرده‌اند.</p>
+                        </div>
+                         <div class="attraction-item">
+                            <img src="../images/ارگ کریمخان.jpg" alt="ارگ کریم‌خان">
+                            <h3>مسجد وکیل</h3>
+                            <p>دژ استواری با قلبی از تدبیر
+جایی که قدرت، امنیت و تدبیر حاکمانه در دل تاریخ جا خوش کرده‌اند.</p>
                         </div>
                     </div>
                 </div>
