--- a/tours/bandar-abbas-organizational.html
+++ b/tours/bandar-abbas-organizational.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="رزرو تور کیش سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۲ و ۳ ستاره، گشت کامل جزیره، تفریحات دریایی، پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
-    <meta name="keywords" content="تور کیش, تور کیش سازمانی, تور تفریحی کیش, سفر گروهی کیش, رزرو تور کیش, هتل کیش, تور کیش با گشت, تور کیش با هواپیما, تور ۳ شب و ۴ روز کیش, تور اداری کیش, تور کیش ویژه شرکت‌ها">
-    <title>تور کیش ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل ساحلی</title>
+    <meta name="description" content="رزرو تور بندرعباس سازمانی با اقامت ۳ شب و ۴ روز، هتل‌های ۳ و ۴ ستاره، گشت کامل شهر، تفریحات دریایی، پذیرایی کامل و حمل‌ونقل انتخابی. ظرفیت محدود!">
+    <meta name="keywords" content="تور بندرعباس, تور بندرعباس سازمانی, تور تفریحی بندرعباس, سفر گروهی بندرعباس, رزرو تور بندرعباس, هتل بندرعباس, تور بندرعباس با گشت, تور بندرعباس با هواپیما, تور ۳ شب و ۴ روز بندرعباس, تور اداری بندرعباس, تور بندرعباس ویژه شرکت‌ها">
+    <title>تور بندرعباس ویژه سازمان‌ها | ۳ شب و ۴ روز با گشت کامل + هتل ساحلی</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -38,8 +38,8 @@
         <section class="tour-details-section">
             <div class="tour-details-container">
                 <div class="tour-header">
-                    <h1>تور کیش ویژه سازمان‌ها</h1>
-                    <p class="tour-subtitle">سفری تفریحی با طعم دریا و آفتاب</p>
+                    <h1>تور بندرعباس ویژه سازمان‌ها</h1>
+                    <p class="tour-subtitle">سفری به قلب خلیج فارس و فرهنگ جنوب</p>
                 </div>
 
                 <div class="tour-main-info">
@@ -61,25 +61,25 @@
                     <div class="info-card">
                         <i class="fas fa-hotel"></i>
                         <h3>اقامت</h3>
-                        <p>هتل‌های ۲ و ۳ ستاره (ساحلی)</p>
+                        <p>هتل‌های ۲ و ۳ ستاره (۱۰ دقیقه تا دریا)</p>
                     </div>
                 </div>
 
                 <div class="tour-description">
                     <h2>توضیحات تور</h2>
-                    <p>🌟 تور کیش ویژه سازمان‌ها – سفری به یاد ماندنی در قلب خلیج فارس 🌟</p>
-                    <p>تصور کنید صبح با صدای آرام امواج دریا از خواب بیدار می‌شوید، آفتاب گرم کیش روی صورتتان می‌تابد و یک روز پر از ماجراجویی در انتظار شماست...</p>
-                    <p>کیش، این مروارید خلیج فارس، با سواحل شنی طلایی و آب‌های نیلگون، منتظر شماست تا خاطراتی فراموش‌نشدنی را رقم بزنید.</p>
+                    <p>🌟 تور بندرعباس ویژه سازمان‌ها – سفری به یاد ماندنی در قلب خلیج فارس 🌟</p>
+                    <p>تصور کنید صبح با نسیم خنک خلیج فارس از خواب بیدار می‌شوید، آفتاب طلایی جنوب روی صورتتان می‌تابد و عطر غذاهای محلی جنوبی مشامتان را نوازش می‌دهد...</p>
+                    <p>بندرعباس، این نگین درخشان خلیج فارس، با جزایر رویایی، طبیعت بکر و مهمان‌نوازی بی‌نظیر، منتظر شماست تا خاطراتی فراموش‌نشدنی را رقم بزنید.</p>
 
                     <h3>✨ چرا این تور را انتخاب کنید؟</h3>
-                    <p>ما معتقدیم هر سفر، فرصتی است برای ایجاد پیوندهای عمیق‌تر بین همکاران و ساختن خاطرات مشترک. در این تور، ما نه فقط یک سفر، بلکه یک تجربه منحصر به فرد را برای شما طراحی کرده‌ایم.</p>
+                    <p>ما معتقدیم هر سفر، فرصتی است برای ایجاد پیوندهای عمیق‌تر بین همکاران و کشف شگفتی‌های طبیعت. در این تور، ما نه فقط یک سفر، بلکه یک ماجراجویی منحصر به فرد در قلب خلیج فارس را برای شما طراحی کرده‌ایم.</p>
 
                     <h3>📦 خدمات و امکانات تور:</h3>
                     <h4>🏨 اقامت رویایی:</h4>
                     <ul>
                         <li>هتل‌های ۲ و ۳ ستاره با دسترسی آسان به دریا (فقط ۱۰ دقیقه پیاده‌روی)</li>
                         <li>اتاق‌های مجهز و تمیز با امکانات کامل</li>
-                        <li>چشم‌انداز زیبا به دریا و فضای آرامش‌بخش</li>
+                        <li>چشم‌انداز زیبا به خلیج فارس و فضای آرامش‌بخش</li>
                     </ul>
 
                     <h4>✈️ سفر راحت و بی‌دغدغه:</h4>
@@ -89,20 +89,22 @@
                         <li>حمل چمدان تا ۲۰ کیلوگرم</li>
                     </ul>
 
-                    <h4>🍽 پذیرایی با طعم خاطره‌سازی:</h4>
+                    <h4>🍽 پذیرایی با طعم جنوب:</h4>
                     <ul>
                         <li>صبحانه، ناهار و شام با منوی متنوع و با کیفیت</li>
+                        <li>غذاهای محلی جنوبی با طعم‌های اصیل</li>
                         <li>نوشیدنی‌های خنک و میان‌وعده‌های مقوی</li>
                         <li>فضای صمیمی برای دورهمی و گفتگو</li>
                     </ul>
 
                     <h4>🎯 گشت‌های هیجان‌انگیز:</h4>
                     <ul>
-                        <li>پارک دلفین‌ها: تماشای نمایش شگفت‌انگیز دلفین‌های باهوش</li>
-                        <li>ساحل مرجانی: تجربه شنا در آب‌های زلال خلیج فارس</li>
-                        <li>آکواریوم کیش: سفری به اعماق دریا و تماشای موجودات دریایی</li>
-                        <li>شهر زیرزمینی کاریز: کشف معماری شگفت‌انگیز و تاریخ کهن</li>
-                        <li>گشت خرید: بازدید از مراکز خرید معروف کیش</li>
+                        <li>جزیره هنگام: بهشت دلفین‌ها و سواحل بکر</li>
+                        <li>جزیره هرمز: تماشای خاک‌های رنگی و طبیعت شگفت‌انگیز</li>
+                        <li>جزیره لارک: تجربه آرامش در جزیره‌ای بکر و زیبا</li>
+                        <li>عمارت کلاه فرنگی: بازدید از بنای تاریخی و معماری منحصر به فرد</li>
+                        <li>آبگرم گنو: تجربه آرامش در چشمه‌های آبگرم طبیعی</li>
+                        <li>بازار محلی: خرید سوغاتی و آشنایی با فرهنگ مردم جنوب</li>
                     </ul>
 
                     <h3>👥 ویژه سازمان‌ها و گروه‌های کاری</h3>
@@ -114,6 +116,7 @@
                         <li>بیمه مسافرتی با پوشش کامل</li>
                         <li>پشتیبانی ۲۴ ساعته در طول سفر</li>
                         <li>هدایای ویژه برای اعضای گروه</li>
+                        <li>گشت‌های اختصاصی با توجه به نیاز گروه</li>
                     </ul>
 
                     <h3 class="call-action">📞 همین حالا با ما تماس بگیرید و سفری متفاوت را آغاز کنید!</h3>
@@ -150,28 +153,40 @@
                     <h2>جاذبه‌های گردشگری</h2>
                     <div class="attractions-grid">
                         <div class="attraction-item">
-                            <img src="../images/پارک دلفین ها.jpg" alt="پارک دلفین ها کیش">
-                            <h3>پارک دلفین‌ها</h3>
-                            <p>جایی که لبخندها به موج‌ها می‌پیوندند
-محلی که شادی و دوستی مثل دلفین‌ها آزادانه می‌رقصند.</p>
+                            <img src="../images/جزیره هنگام.jpg" alt="جزیره هنگام">
+                            <h3>جزیره هنگام</h3>
+                            <p>بهشت دلفین‌ها و سواحل بکر
+                            جایی که طبیعت و آرامش در هم می‌آمیزند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/ساحل مرجانی.jpg" alt="ساحل مرجانی کیش">
-                            <h3>ساحل مرجانی</h3>
-                            <p>قصیده‌ای از رنگ و نور در آغوش دریا
-جایی که آرامش و زیبایی به هم می‌آمیزند و هر موج، نوید دوستی تازه است.</p>
+                            <img src="../images/جزیره هرمز.jpg" alt="جزیره هرمز">
+                            <h3>جزیره هرمز</h3>
+                            <p>نگین رنگارنگ خلیج فارس
+                            جایی که طبیعت با رنگ‌های شگفت‌انگیز خود نقاشی می‌کند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/شهر زیر زمینی کاریز کیش.jpg" alt="شهر زیر زمینی کاریز کیش">
-                            <h3>شهر زیر زمینی کاریز کیش</h3>
-                            <p>رازهای پنهان تاریخ در دل زمین
-جایی که هر قدم، داستانی از استقامت و خرد نیاکان را روایت می‌کند.</p>
+                            <img src="../images/عمارت کلاه فرنگی.jpg" alt="عمارت کلاه فرنگی">
+                            <h3>عمارت کلاه فرنگی</h3>
+                            <p>گنجینه معماری و تاریخ
+                            جایی که هر گوشه‌اش روایتی از گذشته دارد.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/آکواریوم کیش.jpg" alt="آکواریوم کیش">
-                            <h3>آکواریوم</h3>
-                            <p>دنیایی رنگارنگ در دل آب‌های آرام
-جایی که زندگی زیر آب را با چشمانت لمس می‌کنی و آرامش را مهمان قلبت می‌کنی.</p>
+                            <img src="../images/آب گرم گنو.jpg" alt="آبگرم گنو">
+                            <h3>آبگرم گنو</h3>
+                            <p>آرامش در آغوش طبیعت
+                            جایی که هر قطره آب، نوید سلامتی و آرامش است.</p>
+                        </div>
+                         <div class="attraction-item">
+                            <img src="../images/بازار محلی.jpg" alt="بازار محلی بندر عباس">
+                            <h3>بازار محلی بندر عباس</h3>
+                            <p>آرامش در آغوش طبیعتتپش زندگی در قلب مردمان و رنگ‌ها
+جایی که هر دستفروش قصه‌ای دارد و هر کالا پلی است به دل فرهنگ و دوستی.</p>
+                        </div>
+                        <div class="attraction-item">
+                            <img src="../images/جزیره لارک.jpg" alt="جزیره لارک">
+                            <h3>جزیره لارک</h3>
+                            <p>گوهری آرام در میان امواج نیلگون خلیج
+جایی که سکوت و طبیعت، دست در دست هم، لحظه‌هایی ناب از دوستی و هم‌نشینی خلق می‌کنند.</p>
                         </div>
                     </div>
                 </div>
