--- a/tours/qeshm-organizational.html
+++ b/tours/qeshm-organizational.html
@@ -39,7 +39,7 @@
             <div class="tour-details-container">
                 <div class="tour-header">
                     <h1>تور قشم ویژه سازمان‌ها</h1>
-                    <p class="tour-subtitle">سفری تفریحی با طعم دریا و طبیعت</p>
+                    <p class="tour-subtitle">سفری به سرزمین شگفتی‌های طبیعی</p>
                 </div>
 
                 <div class="tour-main-info">
@@ -61,56 +61,64 @@
                     <div class="info-card">
                         <i class="fas fa-hotel"></i>
                         <h3>اقامت</h3>
-                        <p>هتل‌های ۲ و ۳ ستاره (ساحلی)</p>
+                        <p>هتل‌های ۲ و ۳ ستاره (۱۰ دقیقه تا دریا)</p>
                     </div>
                 </div>
 
                 <div class="tour-description">
                     <h2>توضیحات تور</h2>
-                    <p>✨ تور قشم ویژه سازمان‌ها – یک سفر تفریحی، دریایی و پُر از لذت ✨</p>
-                    <p>قشم، جزیره‌ای زیبا با سواحل شنی و آب‌های نیلگون خلیج فارس.</p>
-                    <p>اگه شما هم دنبال یه تجربه‌ی متفاوت، تفریحی و خاطره‌ساز هستید، تور قشم ویژه سازمانی ما دقیقاً همون چیزیه که دنبالشین.</p>
-                    <p>ما این تور رو نه فقط برای دیدن، بلکه برای حس‌کردن ساختیم... برای ساختن لحظه‌هایی که همکارها رو به سفری تفریحی دعوت می‌کنه.</p>
+                    <p>🌟 تور قشم ویژه سازمان‌ها – سفری به سرزمین شگفتی‌های طبیعی 🌟</p>
+                    <p>تصور کنید صبح با نسیم خنک خلیج فارس از خواب بیدار می‌شوید، آفتاب طلایی جنوب روی صورتتان می‌تابد و عطر غذاهای محلی جنوبی مشامتان را نوازش می‌دهد...</p>
+                    <p>قشم، این نگین درخشان خلیج فارس، با طبیعت بکر، شگفتی‌های طبیعی و مهمان‌نوازی بی‌نظیر، منتظر شماست تا خاطراتی فراموش‌نشدنی را رقم بزنید.</p>
 
-                    <h3>✅ چرا این تور فرق داره؟</h3>
-                    <p>ما باور داریم هر سفر، فرصتیه برای تفریح و لذت بردن. توی این تور، شما فقط مسافر نیستید، بلکه عضوی از یک گروه تفریحی و صمیمی هستید. ما با دقت تمام، هر بخش رو طوری برنامه‌ریزی کردیم که حس تفریح، لذت و آرامش واقعی از سفر رو تجربه کنید.</p>
+                    <h3>✨ چرا این تور را انتخاب کنید؟</h3>
+                    <p>ما معتقدیم هر سفر، فرصتی است برای ایجاد پیوندهای عمیق‌تر بین همکاران و کشف شگفتی‌های طبیعت. در این تور، ما نه فقط یک سفر، بلکه یک ماجراجویی منحصر به فرد در قلب خلیج فارس را برای شما طراحی کرده‌ایم.</p>
 
-                    <h3>📦 اطلاعات کامل تور:</h3>
-                    <h4>📅 مدت اقامت:</h4>
-                    <p>3 شب و 4 روز پر از تجربه‌های تفریحی</p>
-
-                    <h4>✈️ پرواز:</h4>
+                    <h3>📦 خدمات و امکانات تور:</h3>
+                    <h4>🏨 اقامت رویایی:</h4>
                     <ul>
-                        <li>پرواز رفت‌وبرگشت از تهران</li>
-                        <li>ترانسفر فرودگاهی</li>
-                        <li>چمدان 20 کیلویی</li>
+                        <li>هتل‌های ۲ و ۳ ستاره با دسترسی آسان به دریا (فقط ۱۰ دقیقه پیاده‌روی)</li>
+                        <li>اتاق‌های مجهز و تمیز با امکانات کامل</li>
+                        <li>چشم‌انداز زیبا به خلیج فارس و فضای آرامش‌بخش</li>
                     </ul>
 
-                    <h4>🍽 پذیرایی کامل:</h4>
+                    <h4>✈️ سفر راحت و بی‌دغدغه:</h4>
                     <ul>
-                        <li>صبحانه، ناهار و شام با منوی متنوع و کیفیت بالا</li>
-                        <li>نوشیدنی‌ها و میان‌وعده‌های بین‌راهی</li>
-                        <li>فضای دوستانه برای صرف غذا در کنار هم</li>
+                        <li>پرواز رفت و برگشت از تهران با هواپیمای معتبر</li>
+                        <li>ترانسفر رایگان فرودگاهی و هتلی</li>
+                        <li>حمل چمدان تا ۲۰ کیلوگرم</li>
                     </ul>
 
-                    <h4>🗺 گشت‌های جذاب همراه راهنما:</h4>
+                    <h4>🍽 پذیرایی با طعم جنوب:</h4>
                     <ul>
-                        <li>گشت تفریحی: دره ستاره‌ها و جنگل حرا</li>
-                        <li>گشت ساحلی: ساحل لاک‌پشت‌ها و غار خربس</li>
-                        <li>گشت خرید: بازارهای محلی قشم</li>
+                        <li>صبحانه، ناهار و شام با منوی متنوع و با کیفیت</li>
+                        <li>غذاهای محلی جنوبی با طعم‌های اصیل</li>
+                        <li>نوشیدنی‌های خنک و میان‌وعده‌های مقوی</li>
+                        <li>فضای صمیمی برای دورهمی و گفتگو</li>
                     </ul>
 
-                    <h4>🏨 اقامت:</h4>
+                    <h4>🎯 گشت‌های هیجان‌انگیز:</h4>
                     <ul>
-                        <li>هتل‌های 2 یا 3 ستاره در نزدیکی ساحل</li>
-                        <li>دسترسی آسان به مراکز تفریحی</li>
-                        <li>اتاق‌های تمیز، مجهز و مناسب برای اقامت گروهی</li>
+                        <li>دره ستارگان: شاهکار طبیعت و معماری سنگی</li>
+                        <li>جنگل حرا: تجربه منحصر به فرد در بزرگترین جنگل دریایی جهان</li>
+                        <li>گنبد نمکی و غار نمکدان: شگفتی‌های زیرزمینی قشم</li>
+                        <li>قلعه پرتغالی‌ها: سفر به تاریخ و معماری استعماری</li>
+                        <li>پارک کروکودیل‌ها: تماشای خزندگان عظیم‌الجثه</li>
                     </ul>
 
-                    <h3>👥 ویژه سازمان‌ها و رزروهای گروهی</h3>
-                    <p>اگه قراره با همکارا، کارمندها یا اعضای تیم‌تون سفر برید، ما همه‌چیز رو برای یه تجربه حرفه‌ای اما دوستانه فراهم کردیم. مدیریت یکپارچه، پشتیبانی کامل، زمان‌بندی دقیق و انعطاف بالا مخصوص گروه‌های شرکتی طراحی شده.</p>
+                    <h3>👥 ویژه سازمان‌ها و گروه‌های کاری</h3>
+                    <p>ما درک می‌کنیم که هر سازمان نیازهای خاص خود را دارد. به همین دلیل، برنامه‌ریزی تور را کاملاً منعطف طراحی کرده‌ایم تا بتوانیم با نیازهای شما هماهنگ شویم. از برنامه‌های تیمی گرفته تا زمان‌بندی گشت‌ها، همه چیز را طوری تنظیم می‌کنیم که بهترین تجربه را برای گروه شما رقم بزنیم.</p>
 
-                    <h3 class="call-action">📞 همین حالا تماس بگیرید و سفری متفاوت رو شروع کنید!</h3>
+                    <h3>💫 مزایای ویژه این تور:</h3>
+                    <ul>
+                        <li>راهنمایان مجرب و دوست‌داشتنی</li>
+                        <li>بیمه مسافرتی با پوشش کامل</li>
+                        <li>پشتیبانی ۲۴ ساعته در طول سفر</li>
+                        <li>هدایای ویژه برای اعضای گروه</li>
+                        <li>گشت‌های اختصاصی با توجه به نیاز گروه</li>
+                    </ul>
+
+                    <h3 class="call-action">📞 همین حالا با ما تماس بگیرید و سفری متفاوت را آغاز کنید!</h3>
                     <p>ظرفیت محدود | رزرو فقط با ثبت نام گروهی</p>
                 </div>
 
@@ -144,24 +152,34 @@
                     <h2>جاذبه‌های گردشگری</h2>
                     <div class="attractions-grid">
                         <div class="attraction-item">
-                            <img src="../images/qeshm/stars-valley.jpg" alt="دره ستاره‌ها">
-                            <h3>دره ستاره‌ها</h3>
-                            <p>شاهکار طبیعت و فرسایش</p>
+                            <img src="../images/دره ستارگان.jpg" alt="دره ستارگان قشم">
+                            <h3>دره ستارگان</h3>
+                            <p>شاهکار طبیعت در دل جزیره
+                            جایی که هر ستون سنگی، داستانی از میلیون‌ها سال پیش را روایت می‌کند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/qeshm/hara-forest.jpg" alt="جنگل حرا">
+                            <img src="../images/جنگل حرا.jpg" alt="جنگل حرا قشم">
                             <h3>جنگل حرا</h3>
-                            <p>اکوسیستم منحصر به فرد</p>
+                            <p>بزرگترین جنگل دریایی جهان
+                            جایی که درختان و دریا در هم می‌آمیزند و منظره‌ای بی‌نظیر خلق می‌کنند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/qeshm/turtle-beach.jpg" alt="ساحل لاک‌پشت‌ها">
-                            <h3>ساحل لاک‌پشت‌ها</h3>
-                            <p>زیستگاه لاک‌پشت‌های دریایی</p>
+                            <img src="../images/غار نمکدان.jpg" alt="غار نمکدان قشم">
+                            <h3>غار نمکدان</h3>
+                            <p>شگفتی زیرزمینی قشم
+                            جایی که بلورهای نمک، دنیایی درخشان را خلق کرده‌اند.</p>
                         </div>
                         <div class="attraction-item">
-                            <img src="../images/qeshm/kharbas-cave.jpg" alt="غار خربس">
-                            <h3>غار خربس</h3>
-                            <p>غار تاریخی با معماری خاص</p>
+                            <img src="../images/قلعه پرتغالی‌ها.jpg" alt="قلعه پرتغالی‌ها قشم">
+                            <h3>قلعه پرتغالی‌ها</h3>
+                            <p>گنجینه تاریخی قشم
+                            جایی که هر سنگ، روایتی از تاریخ پر فراز و نشیب جزیره دارد.</p>
+                        </div>
+                        <div class="attraction-item">
+                            <img src="../images/پارک کروکودیل‌ها.jpg" alt="پارک کروکودیل‌ها قشم">
+                            <h3>پارک کروکودیل‌ها</h3>
+                            <p>تجربه هیجان‌انگیز در کنار خزندگان عظیم
+                            جایی که می‌توانید از نزدیک با این موجودات شگفت‌انگیز آشنا شوید.</p>
                         </div>
                     </div>
                 </div>
