change instagram color and remove toitter icon

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                             <i class="fas fa-phone"></i>
                             <div class="contact-method-content">
                                 <h3>تلفن</h3>
-                                <p>۰۲۱-۱۲۳۴۵۶۷۸</p>
+                                <p>۰۹۹۴۵۴۰۰۳۶۸</p>
                             </div>
                         </div>
                         <div class="contact-method">
@@ -115,9 +115,7 @@
                 <h3>درباره کیجارو</h3>
                 <p>سفری متفاوت با کیجارو</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-telegram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="footer-section">
@@ -133,7 +131,7 @@
                 <h3>تماس با ما</h3>
                 <ul class="footer-contact">
                     <li><i class="fas fa-envelope"></i> hello@kijaroo.com</li>
-                    <li><i class="fas fa-phone"></i> ۰۲۱-۱۲۳۴۵۶۷۸</li>
+                    <li><i class="fas fa-phone"></i> ۰۹۹۴۵۴۰۰۳۶۸</li>
                     <li><i class="fas fa-map-marker-alt"></i> تهران، خیابان ولیعصر</li>
                 </ul>
             </div>
