--- a/rules.html
+++ b/rules.html
@@ -166,15 +166,13 @@
             </div>
             <div class="footer-section">
                 <h3>تماس با ما</h3>
-                <p>ایمیل: info@keyjaro.com</p>
-                <p>تلفن: ۰۲۱-۱۲۳۴۵۶۷۸</p>
+                <p>ایمیل: keyjaro.ir@gmail.com</p>
+                <p>تلفن: ۰۹۹۴۵۴۰۰۳۶۸</p>
             </div>
             <div class="footer-section">
                 <h3>شبکه‌های اجتماعی</h3>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-telegram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
