--- a/tours/javardasht-organizational.html
+++ b/tours/javardasht-organizational.html
@@ -159,8 +159,8 @@
             <h2>رزرو و مشاوره</h2>
             <p>برای رزرو تور و دریافت مشاوره رایگان، با ما تماس بگیرید:</p>
             <div class="contact-info">
-                <p><i class="fas fa-phone"></i> ۰۲۱-۱۲۳۴۵۶۷۸</p>
-                <p><i class="fas fa-envelope"></i> info@keyjaro.com</p>
+                <p><i class="fas fa-phone"></i> ۰۹۹۴۵۴۰۰۳۶۸</p>
+                <p><i class="fas fa-envelope"></i> keyjaro.ir@gmail.com</p>
                 <p><i class="fas fa-whatsapp"></i> ۰۹۱۲۳۴۵۶۷۸۹</p>
             </div>
         </div>
@@ -175,15 +175,14 @@
             <div class="footer-section">
                 <h3>تماس با ما</h3>
                 <p>آدرس: تهران، خیابان ولیعصر</p>
-                <p>تلفن: ۰۲۱-۱۲۳۴۵۶۷۸</p>
-                <p>ایمیل: info@keyjaro.com</p>
+                <p>تلفن: ۰۹۹۴۵۴۰۰۳۶۸</p>
+                <p>ایمیل: keyjaro.ir@gmail.com</p>
             </div>
             <div class="footer-section">
                 <h3>شبکه‌های اجتماعی</h3>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-telegram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
+                    <a href="https://instagram.com/keyjaro.ir"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
